// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ktsJCg"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dvHIib"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI UWuEM"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eOxkji"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ktsJCg"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ktsJCg"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ktsJCg"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB jhRSEC"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB jhRSEC"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ktsJCg"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fHsjty RmHsK"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB jhRSEC"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI iSLClF"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI dGQGJi"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gnICFZ"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI eBOTXe"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <div
      className="sc-iBBJcT cRjzVm"
    >
      <input
        className="sc-RYuTI cMGxHt"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT hwIgqE"
    >
      <input
        className="sc-RYuTI ktsJCg"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
